--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="section">
       <div class="container">
         <h1 class="lead">List of Countries</h1>
+        <div id="alert"></div>
         <ul class="list-group mt-5" id="the-list">
         </ul>
         <div class="the-form mt-4">
